// Jest Snapshot v1, https://goo.gl/fbAQLP @generated

exports[`Wallet with XEC balances 1`] = `
Array [
  <div
    className="sc-kkGfuU jfxnHc"
  >
    <div
      className="sc-dxgOiQ ftpIpC"
    >
      <h4
        className="sc-ckVGcZ gcRXVO"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eHgmQL jCioUo"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-hMqMXs kjfrok"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-eqIVtm cyXONV"
        >
          <h2>
            eCash Namespace Alias
          </h2>
          <h3>
            <span
              aria-label="user"
              className="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
             
            N/A
          </h3>
        </div>
        <div
          className="sc-hMqMXs kjfrok"
        >
          <div
            className="sc-jlyJG ihTnaY"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <span
                          className="ant-input-group-wrapper"
                        >
                          <span
                            className="ant-input-wrapper ant-input-group"
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              name="aliasName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Enter a desired alias"
                              style={null}
                              type="text"
                              value=""
                            />
                            <span
                              className="ant-input-group-addon"
                            >
                               . xec
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <button
                          className="sc-jhAzac fTVLCr"
                          onClick={[Function]}
                        >
                          Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens 1`] = `
Array [
  <div
    className="sc-kkGfuU jfxnHc"
  >
    <div
      className="sc-dxgOiQ ftpIpC"
    >
      <h4
        className="sc-ckVGcZ gcRXVO"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eHgmQL jCioUo"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-hMqMXs kjfrok"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-eqIVtm cyXONV"
        >
          <h2>
            eCash Namespace Alias
          </h2>
          <h3>
            <span
              aria-label="user"
              className="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
             
            N/A
          </h3>
        </div>
        <div
          className="sc-hMqMXs kjfrok"
        >
          <div
            className="sc-jlyJG ihTnaY"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <span
                          className="ant-input-group-wrapper"
                        >
                          <span
                            className="ant-input-wrapper ant-input-group"
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              name="aliasName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Enter a desired alias"
                              style={null}
                              type="text"
                              value=""
                            />
                            <span
                              className="ant-input-group-addon"
                            >
                               . xec
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <button
                          className="sc-jhAzac fTVLCr"
                          onClick={[Function]}
                        >
                          Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with XEC balances and tokens and state field 1`] = `
Array [
  <div
    className="sc-kkGfuU jfxnHc"
  >
    <div
      className="sc-dxgOiQ ftpIpC"
    >
      <h4
        className="sc-ckVGcZ gcRXVO"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-hSdWYo bXDUps"
    >
      <span
        className="sc-fBuWsC dPGzRB"
      >
         
        0.06
         
        XEC
         
      </span>
    </div>
  </div>,
  <div
    className="sc-hMqMXs kjfrok"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-eqIVtm cyXONV"
        >
          <h2>
            eCash Namespace Alias
          </h2>
          <h3>
            <span
              aria-label="user"
              className="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
             
            N/A
          </h3>
        </div>
        <div
          className="sc-hMqMXs kjfrok"
        >
          <div
            className="sc-jlyJG ihTnaY"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <span
                          className="ant-input-group-wrapper"
                        >
                          <span
                            className="ant-input-wrapper ant-input-group"
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              name="aliasName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Enter a desired alias"
                              style={null}
                              type="text"
                              value=""
                            />
                            <span
                              className="ant-input-group-addon"
                            >
                               . xec
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <button
                          className="sc-jhAzac fTVLCr"
                          onClick={[Function]}
                        >
                          Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet without XEC balance 1`] = `
Array [
  <div
    className="sc-kkGfuU jfxnHc"
  >
    <div
      className="sc-dxgOiQ ftpIpC"
    >
      <h4
        className="sc-ckVGcZ gcRXVO"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eHgmQL jCioUo"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-hMqMXs kjfrok"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-eqIVtm cyXONV"
        >
          <h2>
            eCash Namespace Alias
          </h2>
          <h3>
            <span
              aria-label="user"
              className="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
             
            N/A
          </h3>
        </div>
        <div
          className="sc-hMqMXs kjfrok"
        >
          <div
            className="sc-jlyJG ihTnaY"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <span
                          className="ant-input-group-wrapper"
                        >
                          <span
                            className="ant-input-wrapper ant-input-group"
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              name="aliasName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Enter a desired alias"
                              style={null}
                              type="text"
                              value=""
                            />
                            <span
                              className="ant-input-group-addon"
                            >
                               . xec
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <button
                          className="sc-jhAzac fTVLCr"
                          onClick={[Function]}
                        >
                          Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
Array [
  <div
    className="sc-kkGfuU jfxnHc"
  >
    <div
      className="sc-dxgOiQ ftpIpC"
    >
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        >
          edit.svg
        </svg>
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            >
              eye-invisible.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eHgmQL jCioUo"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <div
    className="sc-hMqMXs kjfrok"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="sc-eqIVtm cyXONV"
        >
          <h2>
            eCash Namespace Alias
          </h2>
          <h3>
            <span
              aria-label="user"
              className="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
             
            N/A
          </h3>
        </div>
        <div
          className="sc-hMqMXs kjfrok"
        >
          <div
            className="sc-jlyJG ihTnaY"
          >
            <form
              className="ant-form ant-form-horizontal"
              onReset={[Function]}
              onSubmit={[Function]}
              style={
                Object {
                  "width": "auto",
                }
              }
            >
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <span
                          className="ant-input-group-wrapper"
                        >
                          <span
                            className="ant-input-wrapper ant-input-group"
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              name="aliasName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Enter a desired alias"
                              style={null}
                              type="text"
                              value=""
                            />
                            <span
                              className="ant-input-group-addon"
                            >
                               . xec
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-form-item"
              >
                <div
                  className="ant-row ant-form-item-row"
                  style={Object {}}
                >
                  <div
                    className="ant-col ant-form-item-control"
                    style={Object {}}
                  >
                    <div
                      className="ant-form-item-control-input"
                    >
                      <div
                        className="ant-form-item-control-input-content"
                      >
                        <button
                          className="sc-jhAzac fTVLCr"
                          onClick={[Function]}
                        >
                          Register Alias
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
